# adaptkan

./: .gitignore  README.md  adaptkan_tutorial.ipynb  pyproject.toml
.ipynb_checkpoints/: adaptkan_tutorial-checkpoint.ipynb
adaptkan.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
adaptkan/common/: __init__.py  dynamics.py  image_util.py  lyapunov_util.py  postprocessors.py  process_feynman.py  sweep_util.py  wrappers.py
adaptkan/jax/: __init__.py  constants.py  data.py  fit.py  layers.py  losses.py  model.py  utils.py  viz.py
configs/datasets/cifar10/: cifar10.yml  cifar10_ood.yml
configs/datasets/cifar100/: cifar100.yml  cifar100_ood.yml
configs/networks/: resnet18_32x32.yml
configs/pipelines/: classification.yml  ood.yml
configs/postprocessors/: classifier.yml  hists.yml  hists_msp.yml  msp.yml
examples/: chebyshev_analysis.py  chebyshev_refit_analysis.ipynb  constraint_adapt_demo.py  constraint_demo.py  constraints_tutorial.ipynb  scipy_bspline_vs_ours.ipynb
examples/.ipynb_checkpoints/: chebyshev_refit_analysis-checkpoint.ipynb
scripts/: download_ood.py  eval_ood_ext.py  sweep_feynman_parallel.py  sweep_image_datasets.py  train_image_datasets.py  train_lyapunov.py
tests/: test_chebyshev_adaptation.py  test_chebyshev_constraints.py  test_constraints.py  test_layer_constraint_init.py
